<resources>
    <string name="app_name">Matjari</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="progress_dialog_loading">Loading...</string>
    <string name="dialog_error_ok">OK</string>
    <string name="error_connection">Connection Error !!!</string>
    <string name="error_action_retry">Retry</string>
    <string name="error_empty_field">Please make sure to fill all fields.</string>
    <string name="sold">Sold</string>
    <string name="comming_soon">Comming Soon</string>
    <string name="all_offers">All Offers</string>
    <string name="currency">AED</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="total">Total</string>
    <string name="items">Items</string>
    <string name="successfully_added_to_the_bag">has been added successfully to your bag</string>
    <string name="order_submitted">Your Order Has Been Submitted</string>
    <string name="has_been_added_to_wishlist">Has Been Added To Your Wishlist</string>
    <string name="has_been_removed_from_wishlist">Has Been Removed From Wishlist</string>
    <string name="category">Category</string>
    <string name="brand">Brand</string>
    <string name="season">Season</string>
    <string name="store">Store</string>
    <string name="can_be_shipped">Can Be Shipped</string>
    <string name="shipping_fees">Shipping Fees</string>
    <string name="phone_number">Phone Number</string>
    <string name="all_description">All Description</string>
    <string name="color">Color</string>
    <string name="shipping_and_delivery">Shipping and Delivery</string>
    <string name="size">Size</string>
    <string name="offer_includes">OFFER INCLUDES</string>
    <string name="forgot_your_password">Forgot My Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="has_been_order">Has Been Order</string>
    <string name="qty">QTY:</string>
    <string name="sign_out">Logout</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="reset_password">Reset Password</string>
    <string name="cancel">Cancel</string>
    <string name="my_orders">My Orders</string>
    <string name="checkout">Checkout</string>
    <string name="checkout1">Check Out</string>
    <string name="add_shipping_address">Add Shipping Address</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="notes">Notes</string>
    <string name="tell_us_about_your_experience">Tell us about your experience ..</string>
    <string name="forget_password">Forget Password</string>
    <string name="are_you_sure_sign_out">Are You Sure You Want To Sign Out</string>
    <string name="add_new_phone_number">Add New Phone Number</string>
    <string name="save">Save</string>
    <string name="add_your_address">Add Your Address</string>
    <string name="shipping_info">Shipping Info</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_Address">Email Address</string>
    <string name="login_with_facebook">Login With facebook</string>
    <string name="all">All</string>
    <string name="order_cancelation">Your order has been canceled</string>
    <string name="any">Any</string>
    <string name="select">Select</string>
    <string name="price_low_to_high">Price Low To High</string>
    <string name="price_high_to_low">Price High To Low</string>
    <string name="new_prodocts">New</string>
    <string name="buy_now">Buy Now</string>
    <string name="off">off</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="rate_us_on_store">Rate us on store</string>
    <string name="my_account">My Account</string>
    <string name="email_address">Email Address</string>
    <string name="send_me_a_code">SEND ME A CODE</string>
    <string name="wrong_code">Sorry Wrong Code</string>
    <string name="change_address">Change Address</string>
    <string name="ship_to_nearby_pickup_location">Ship to nearby pickup location</string>
    <string name="ship_to_my_delivery_address">Ship to my delivery address</string>
    <string name="help">Help</string>
    <string name="easy_returns">Easy Returns</string>
    <string name="fast_shipping">Fast Shipping</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="my_bag">My Bag</string>
    <string name="submit_order">SUBMIT ORDER</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">cart</string>
    <string name="user">User</string>
    <string name="dont_have_google_play_store">you don\'t have google play store</string>
    <string name="reset">RESET</string>
    <string name="filter">Filter</string>
    <string name="done">DONE</string>
    <string name="sort">SORT</string>
    <string name="neww">new</string>
    <string name="price_high">price (High)</string>
    <string name="price_low">price (Low)</string>
    <string name="filters">FILTERS</string>
    <string name="price">Price</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="enter_the_verification_code_received_by_email">Enter the verification code received by email</string>
    <string name="check_code">Check Code</string>
    <string name="error_parse">Parsing Error</string>
</resources>
