<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/path_684"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_categories"
        android:enabled="true"
        android:icon="@drawable/path_686"
        android:title="@string/categories"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_black_24px"
        android:title="@string/wishlist"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_cart"
        android:enabled="true"
        android:icon="@drawable/shopping_bag_31"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_black_24px"
        android:title="@string/user"
        app:showAsAction="ifRoom" />

</menu>