<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/reset"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/filter"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/done"
            android:textColor="@color/red"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:padding="@dimen/layout_padding"
        android:text="@string/sort"
        android:textStyle="bold" />

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/v_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding">

            <ImageView
                android:id="@+id/iv_new"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_cancel"
                android:tint="@color/black" />

            <TextView
                android:id="@+id/tv_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/neww"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/v_price_high"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding">

            <ImageView
                android:id="@+id/iv_price_high"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_cancel"
                android:tint="@color/grey" />

            <TextView
                android:id="@+id/tv_price_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/price_high"
                android:textColor="@color/grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/v_price_low"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding">

            <ImageView
                android:id="@+id/iv_price_low"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_cancel"
                android:tint="@color/grey" />

            <TextView
                android:id="@+id/tv_price_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/price_low"
                android:textColor="@color/grey" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:padding="@dimen/layout_padding"
        android:text="@string/filters"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/v_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingRight="@dimen/layout_padding"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_min_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/min"
            android:inputType="number"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="-"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_max_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/max"
            android:inputType="number"
            android:textSize="14sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/v_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/brand"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/v_clear_brand"
            android:gravity="center"
            android:text="@string/any"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/v_clear_brand"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/circle"
            android:visibility="gone">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerInParent="true"
                android:padding="1dp"
                android:src="@mipmap/ic_cancel"
                android:tint="@color/white" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/v_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/color"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="center"
                android:id="@+id/tv_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/any"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.salaheddin.store.ui.widgets.CircleImageView
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/iv_color"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@color/black" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/circle"
            android:visibility="gone">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerInParent="true"
                android:padding="1dp"
                android:src="@mipmap/ic_cancel"
                android:tint="@color/white" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/v_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/size"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toLeftOf="@+id/v_clear_size"
            android:gravity="center"
            android:text="@string/any"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/v_clear_size"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/circle"
            android:visibility="gone">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerInParent="true"
                android:padding="1dp"
                android:src="@mipmap/ic_cancel"
                android:tint="@color/white" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/v_season"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/season"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_season"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toLeftOf="@+id/v_clear_season"
            android:gravity="center"
            android:text="@string/any"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/v_clear_season"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/circle"
            android:visibility="gone">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerInParent="true"
                android:padding="1dp"
                android:src="@mipmap/ic_cancel"
                android:tint="@color/white" />
        </RelativeLayout>
    </RelativeLayout>


</LinearLayout>