<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/layout_padding"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/group_1" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_user_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_user_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="Damascus, Jaramana, AlSouoof Street, Building 5 Flat 601"
            android:textColor="#6A6A6A"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/v_phones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/layout_padding"
            android:id="@+id/v_edit_shipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_address"
            android:textColor="#073CCC"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notes"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_user_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3sp"
            android:layout_weight="1"
            android:text="@string/tell_us_about_your_experience"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>